client/src/App.css
@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:600');
@import url('https://fonts.googleapis.com/css?family=Poppins');

body {
    background-color: #F3F0F0;
}

.logo {
    height: 40px;
    margin: 10px 10px 0px 10px;
    padding: 6px 0px 0px 0px;
}

.userprofile__body {
    background-color: #F3F0F0;
    height: 100%;
    width: 100%;
    font-family: 'Poppins', sans-serif;
}

.userprofile__topnav {
    display: flex;
    justify-content: space-between;
    color: #142328;
    width: 100%;
}

.userprofile__nav--right {
    margin: 20px;
}

.userprofile__community--link {
    margin: 10px;
    text-decoration: underline;
}

.userprofile__logout--btn {
    border-radius: 4px;
    border: none;
    margin-left: 20px;
    margin-right: 15px;
}

.userprofile__middlediv {
    margin-top: 5%;
    display: flex;
    color: #142328;
}

.userprofile__userinfo {
    margin-left: 10%;
    margin-right: 20%;
}

.userprofile__name {
    font-size: 35px;
    margin-left: 30px;
}

.userprofile__bio {
    font-size: 20px;
    margin-left: 30px;
}

.userprofile__userphoto {
    border-radius: 50%;
    width: 170px;
    height: 170px;
}

.hide {
    display: none;
}

.userprofile__middle--left {
    display: flex;
}

.userprofile__createarticle {
    margin-right: 20%;
    font-size: 12px;
    color: #142328
}

.userprofile__createarticle--container {
    background-color: #2e3192;
    padding: 20px;
    width: 300px;
    border-radius: 15px;
    opacity: 0.80;
}

.userprofile__createarticle-title {
    font-family: 'Poppins', sans-serif;
    color: white;
    font-size: 17pt;
    border-bottom: 2px dashed #FF0000;
}

.userprofile__createarticle--field {
    line-height: 25px;
    display: flex;
    flex-direction: column;
    margin-bottom: 5px;
}

.userprofile__createarticle--form {
    border-radius: 15px;
}

.userprofile__createarticle--label {
    font-family: 'Poppins', sans-serif;
    color: white;
    font-size: 10pt;
}

.userprofile__createarticle--button {
    border-radius: 4px;
    border: none;
    padding: 7px;
    margin: 5px 5px 5px 0px;
    background-color: #8393CA;
    color: white;
    opacity: 0.97;
}

.userprofile__createarticle--button:hover {
    opacity: 1;
    border: 1px solid lightgrey;
}

.userprofile__articlescontainer {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    position: absolute; 
    left: 0; 
    right: 0; 
    bottom: 0; 
    height: 40%;
}

a {
    text-decoration: none;
    color: #142328;
}

.userprofile__article {
    text-align: center;
    width: 300px;
    height: 250px;
    margin: 20px;
    font-family: 'Poppins', sans-serif;
    text-align: left;
    border-bottom: 2px black solid;
}

.userprofile__article:hover {
    background-color: rgba(206, 220, 228, 0.3);
    box-shadow: 8px 8px rgba(209, 216, 220, 0.6);
}

.userprofile__article--title {
    font-size: 12pt;
    height: 40px;
    color: #2b2b2b;
    border-bottom: 1px black solid;
    width: 100%;
    font-weight: 600;
    display: inline-block;
}

.userprofile__article--author {
    font-size: 12px;
    margin-left: 5px;
}

.article {
    margin-top: 50px;
}

.header {
    border-bottom: 1px solid black;
}

.header__h1 {
    margin: 30px;
    font-size: 50px;
}

.footer {
    position: fixed; 
    left: 0;
    right: 0; 
    bottom: 0;
    background-color: #132026;
}

.footer__link {
    color: white;
}

.footer__ul {
    list-style: none;
    text-align: center;
    display: flex;
    justify-content: center;
    margin:0;
}

.footer__li {
    margin: 15px;
    color: white;
    font-family: 'Poppins', sans-serif;
    font-size: 10pt;
}

.homepage__header {
    width: 100%;
    height: 60px;
    background-color: #2E3192;
    display: flex;
    justify-content: space-between;
}

.homepage__logo {
    height: 40px;
    margin: 10px 10px 0px 10px;
    padding: 6px 0px 0px 0px;
}

.homepage__form {
    display: flex;
}

.homepage__login-field {
    margin: 10px 5px 6px 5px;
    display: flex;
    flex-direction: column;
}

.homepage__login-label {
    font-family: 'Poppins', sans-serif;
    color: white;
    font-size: 9pt;
}

::placeholder {
    font-family: 'Poppins', sans-serif;
    font-size: 8pt;
}

.login-button {
    height: 25px;
    width: 70px;
    background-color: #0188CC;
    align-self: center;
    border-radius: 4px;
    border: none;
    color: white;
    font-family: 'Poppins', sans-serif;
    margin: 22px 12px 6px 5px;
}

.login-button:hover {
    border: 1px solid lightgrey;
}

.homepage__body {
    height: 100%;
    width: 100%;
    background-color: #F3F0F0;
    display: flex;
    flex-flow: row wrap;
}

.homepage__description {
    width: 100%;
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    align-self: center;
}

.homepage__description-title {
    height: 78px;
}

.homepage__description-body {
    font-family: 'Poppins', sans-serif;
    font-size: 11pt;
    padding: 0px 10px 0px 15px;
    margin: 0;
}

.homepage_signup-button {
    background-color: #8393CA;
    border-radius: 4px;
    border: none;
    height: 25px;
    width: 70px;
    color: white;
    margin: 40px auto 0px 20px;
    opacity: 0.95;
    transition: 0.3s;
}

.homepage_signup-button:hover {
    opacity: 1;
    border: 1px solid lightgrey;
}

.homepage__description-text {
    margin: 100px 30px 100px 90px;
    padding-right: 20px;
}

.home-image {
    width: 300px;
    margin: 60px 60px 60px 0px;
}

.homepage__about {
    width: 100%;
    margin-bottom: 40px;
}

.homepage__about-howto {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-evenly;
}

.homepage__icon {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.laptop {
    width: 160px;
    margin-left: 0;
    padding: 0;
}

.code {
    width: 125px;
    margin-top: 14px;
    padding: 0;
    padding-bottom: 12px;
}

.share {
    width: 153px;
    margin-left: 0;
    padding: 0;
}

.icon-text {
    font-family: 'Poppins', sans-serif;
    font-size: 14pt;
    font-weight: bold;
    color: #2d3092;
    margin-top: 0;
    text-align: center;
    padding-bottom: 5px;
    border-bottom: 2px dashed #FF0000;
}

.homepage__banner-photo {
    width: 100%;
    height: 40%;
}

.allarticles__body {
    background-color: #F3F0F0;
    height: 100%;
    width: 100%;
}

.allarticles__backbtn {
    width: 70px;
    margin-top: 10px;
    margin-right: 10px;
    border-radius: 4px;
    border: none;
}

.allarticles__articles--div {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    position: absolute; 
    margin-bottom: 80px;
}

.allarticles__logo {
    height: 40px;
    margin: 10px 10px 0px 10px;
    padding: 6px 0px 0px 0px;
}

.allarticles__article {
    text-align: center;
    width: 300px;
    height: 250px;
    margin: 20px;
    font-family: 'Poppins', sans-serif;
    text-align: left;
}

.allarticles__article:hover {
    background-color: rgba(206, 220, 228, 0.3);
    box-shadow: 8px 8px rgba(209, 216, 220, 0.6);
}

.allarticles__article--title {
    font-size: 12pt;
    height: 60px;
    color: #2b2b2b;
    border-bottom: 1px black solid;
    width: 100%;
    font-weight: 600;
    display: inline-block;
}

.allarticles__article--author {
    color: #636468;
    font-weight: 600;
    font-size: 10pt;
}

.article__header {
    justify-content: space-between;
}

.article__header_logo {
    float: left;
    margin-right: 25%;
}

.article__header__buttons {
    float: right;
    margin-left: 25%;
}

.articles__banner-photo {
    background-position: center;
    height: 25rem;
    width: 100vw;
}

.register {
    height: 100%;
    display: flex;
    justify-content: center;
}

.register__title {
    font-family: 'Poppins', sans-serif;
    font-size: 30pt;
    color: white;
}

.register__form-container {
    width: 600px;
    height: 450px;
    border-radius: 15px;
    display: flex;
    flex-direction: column;
    background-image: url("./images/register-splash.png");
    opacity: 0.95;
    align-items: center;
    justify-content: center;
    margin-top: 30px;
}

.register__form {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.register__field {
    display: flex;
    flex-direction: column;
}

.register__field-label {
    font-family: 'Poppins', sans-serif;
    font-size: 11pt;
    color: white;
}

.register__button {
    background-color: #8393CA;
    border-radius: 4px;
    border: none;
    height: 25px;
    font-family: 'Poppins', sans-serif;
    margin: 20px;
}

.article__page {
    height: 100%;
    flex-direction: column;
    justify-content: center;
    align-self: center;
}

.article__page-details {
    width: 500px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-self: center;
    text-align: center;
    padding-top: 7%;
    margin: 30%;
} 

.article__page-content {
    text-justify: inter-word;
    text-align: justify;
    line-height: 22px;
}

.article__page-title {
    font-family: 'Josefin Sans', sans-serif;
    font-size: 30pt;
    color: #142328;
    text-align: center;
    margin-top: 20px;
}

.article__page-author {
    font-family: 'Josefin Sans', sans-serif;
    text-transform: uppercase;
    font-size: 14pt;
    color: #142328;
    text-align: center;
}

.article__top-image {
    height: 210px;
    opacity: 0.90;
}

.article__delete--btn {
    margin-top: 70px;
    border-radius: 4px;
    border: none;
    width: 100px;
    padding: 8px;
    margin: 5px 5px 5px 0px;
    background-color: #FF0000;
    color: white;
}

.article__delete--btn:hover {
    border: 1px solid lightgrey;
}

.updatearticle__container {
    background-color: #2e3192;
    padding: 20px;
    width: 300px;
    border-radius: 15px;
    opacity: 0.80;
}

.updatearticle__form {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-self: center;
}

.updatearticle__title {
    font-family: 'Poppins', sans-serif;
    color: white;
    font-size: 17pt;
    border-bottom: 2px dashed #FF0000;
}

.updatearticle__field {
    line-height: 25px;
    display: flex;
    flex-direction: column;
    margin-bottom: 5px;
}

.updatearticle__label {
    font-family: 'Poppins', sans-serif;
    color: white;
    font-size: 10pt;
}

.updatearticle__input {
    margin-bottom: 5px;
}

.updatearticle__submit--button {
    border-radius: 4px;
    border: none;
    width: 100px;
    padding: 7px;
    margin: 5px 5px 5px 0px;
    background-color: #8393CA;
    color: white;
    opacity: 0.97;
}

.updatearticle__submit--button:hover {
    opacity: 1;
    border: 1px solid lightgrey;
}

.article__logo {
    height: 40px;
    margin: 10px 10px 0px 10px;
    padding: 6px 0px 0px 0px;
}

